Spacing Issues

--- a/style.css
+++ b/style.css
@@ -118,8 +118,12 @@ body{
     text-align: center;
 }
 
+#preview-resources{
+    margin-top: 100px;
+}
+
 #preview1{
-    margin-top: 32px;
+    margin-top: 100px;
 }
 
 .section_name{
